Alignment and sizes Fixes to Hero, Header, Footer and Section Component.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@ body {
 @layer base {
   /* Responsive Headings: */
   h1 {
-    @apply text-xl sm:text-5xl md:text-6xl lg:text-7xl;
+    @apply text-4xl sm:text-5xl md:text-6xl lg:text-7xl;
   }
 
   h2 {
